--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
-{
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/src/index" }
+ {
+    "builds": [
+      {
+        "src": "src/index.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/index.py"
+      }
     ]
   }
