--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
  {
-    "builds": [
-      {
-        "src": "src/index.py",
-        "use": "@vercel/python"
-      }
-    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/index.py"
+        "dest": "api/index.py"
       }
     ]
   }
